<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Library</string>
    <string name="menu_settings">Settings</string>
    
    <string name="addArtist">Add Artist</string>
    <string name="addGenre">Add Genre</string>
    <string name="addAlbum">Add Album</string>
    <string name="addSong">Add Song</string>
    
    <string name="editContent">Edit Content</string>
    <string name="editArtist">Edit Artist</string>
    <string name="editGenre">Edit Genre</string>
    <string name="editAlbum">Edit Album</string>
    <string name="editSong">Edit Song</string>
    
    <string name="viewContent">View Content</string>
    <string name="viewArtist">View Artist</string>
    <string name="viewGenre">View Genre</string>
    <string name="viewAlbum">View Album</string>
    <string name="viewSong">View Song</string>
    
    <string name="artist">Artist</string>
    <string name="currentArtists">Current Artists</string>
    
    <string name="genre">Genre</string>
    <string name="currentGenres">Current Genres</string>
    
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="currentAlbums">Current Albums</string>
    
    <string name="song">Song</string>
    <string name="currentSongs">Current Songs</string>
    
    <string name="add">Add</string>
    
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    
    <string name="title">Title</string>
    
    <string-array name="sort">
        <item>Artist</item>
        <item>Album</item>
        <item>Genre</item>
        <item>Songs</item>
    </string-array>
    <string name="albumArtGoesHere">Album Art Goes Here</string>
    <string name="noCurrentSong">No current song</string>
    <string name="noCurrentAlbum">No current album</string>
    <string name="startTime">0:00</string>
    
</resources>