<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/focused"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/play"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#669900" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/focused"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/edit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#669900" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/focused"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/delete"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

</LinearLayout>