<?xml version="1.0" encoding="utf-8"?>   
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".AddAlbumActivity" >
	  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:focusable="true"
    	android:focusableInTouchMode="true"
	    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:text="@string/addAlbum"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/addAlbumTitle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/album"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtAddTitle"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:inputType="text"
                android:ems="10" />
            
        </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="fill_parent" >

               <TextView
                   android:id="@+id/ArtistName"
                   android:layout_width="wrap_content"
                   android:layout_height="fill_parent"
                   android:gravity="center_vertical"
                   android:paddingLeft="5dp"
                   android:paddingRight="12dp"
                   android:paddingTop="10dp"
                   android:text="@string/artist"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <Spinner
                   android:id="@+id/spinArtist"
                   android:layout_width="0dip"
                   android:layout_height="fill_parent"
                   android:layout_weight="1" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="fill_parent" >

               <TextView
                   android:id="@+id/Genre"
                   android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                   android:layout_gravity="center"
                android:gravity="center_vertical"
                   android:paddingLeft="5dp"
                   android:paddingRight="8dp"
                   android:paddingTop="10dp"
                   android:text="@string/genre"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <Spinner
                   android:id="@+id/spinGenre"
                   android:layout_width="0dip"
                android:layout_height="fill_parent"
                   android:layout_weight="1" />
               
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="fill_parent" >

               <TextView
                   android:id="@+id/Year"
                   android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                   android:paddingLeft="5dp"
                   android:paddingRight="20dp"
                   android:paddingTop="10dp"
                   android:text="@string/year"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <EditText
                   android:id="@+id/txtAddYear"
                   android:layout_width="0dip"
                android:layout_height="fill_parent"
                   android:layout_weight="1"
                   android:ems="10"
                   android:inputType="number" />
           </LinearLayout>
    	
    </LinearLayout>

    <Button
        android:id="@+id/btnAddAlbum"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addAlbum"
        android:text="@string/addAlbum" />

    <ListView
	    android:id="@+id/displayAlbums2"
	    android:layout_width="wrap_content"
	    android:layout_height="0dip"
	    android:layout_weight="1"
        android:transcriptMode="alwaysScroll"  >
	</ListView>
		
</LinearLayout>