<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:clickable="false"
    android:fillViewport="true"
    android:longClickable="false"
    android:orientation="vertical"
    tools:context=".EditAlbumActivity" >
	  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/editAlbum"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:paddingBottom="10dp"
	                android:paddingTop="5dp"
	                android:text="@string/editAlbum"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="fill_parent" >
	            
	        	<TextView
	                android:id="@+id/editAlbumTitle"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:layout_gravity="center"
	                android:gravity="center_vertical"
	                android:paddingLeft="5dp"
	                android:paddingRight="8dp"
	                android:text="@string/album"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            
	            <EditText
	                android:id="@+id/txtEditAlbum"
	                android:layout_width="0dip"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:inputType="text"
	                android:selectAllOnFocus="true"
	                android:ems="10" />
	            
	      	</LinearLayout>
	            
	        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/editArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="12dp"
                    android:paddingTop="10dp"
                    android:text="@string/artist"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinEditArtist"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

            </LinearLayout>
	            
	        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/editGenre"
                    android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
                    android:layout_gravity="center"
	                android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="8dp"
                    android:paddingTop="10dp"
                    android:text="@string/genre"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinEditGenre"
                    android:layout_width="0dip"
	                android:layout_height="fill_parent"
                    android:layout_weight="1" />
                
            </LinearLayout>
	            
	        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/editYear"
                    android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/year"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/txtEditYear"
                    android:layout_width="0dip"
	                android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:selectAllOnFocus="true"
                    android:inputType="number" />
            </LinearLayout>
	    	
	    </LinearLayout>

	    <Button
	        android:id="@+id/btnEditAlbum"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="editAlbum"
	        android:text="@string/editAlbum" />
	
	</LinearLayout>
	
</ScrollView>